lab-tasks/4-canary-release/lab-server-v2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: http-server
  template:
    metadata:
      annotations:
      labels:
        app: http-server
        name: http-server
        version: v2
    spec:
      containers:
        - name: http-server
          image: "registry.hub.docker.com/mchudnovskiy/http-server:latest"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 20m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 50Mi
          ports:
            - containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: application-config
              mountPath: "/deployments/config"
              readOnly: true
      volumes:
        - name: application-config
          configMap:
            name: http-server-config
            items:
              - key: application.properties
                path: application.properties
