lab-tasks/4-canary-release/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: http-server
spec:
  host: http-server
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
