lab-tasks/4-canary-release/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-server
spec:
  hosts:
    - http-server
  http:
    - route:
        - destination:
            host: http-server
            subset: v1
          weight: 90
        - destination:
            host: http-server
            subset: v2
          weight: 10
